--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shifumi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="moves">
+        <button>Pierre</button>
+        <button>Feuille</button>
+        <button>Ciseaux</button>
+    </div>
+    <br>
+    <button id="reset">Reset</button>
+
     
 </body>
 </html>
