--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="moves">
-        <button>Pierre</button>
-        <button>Feuille</button>
-        <button>Ciseaux</button>
+
+    <div class="shifoumi">
+        <div class="moves">
+            <button>Pierre</button>
+            <button>Feuille</button>
+            <button>Ciseaux</button>
+        </div>
+        <br>
+        <button id="reset">Reset</button>
     </div>
-    <br>
-    <button id="reset">Reset</button>
+  
 
     
 </body>
