--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shifumi</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="app.js"></script>
 </head>
 <body>
     <h1>Shifoumi</h1>
@@ -13,7 +14,7 @@
     
     <div class="shifoumi">
         <div class="moves">
-            <button>Pierre</button>
+            <button id="psierre">Pierre</button>
             <button>Feuille</button>
             <button>Ciseaux</button>
         </div>
