--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +8,18 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    <h1>Shifoumi</h1>
-    <br>
-    <br>
+
     
     <div class="shifoumi">
+        <h1>Shifoumi</h1>
+        <br>
         <div class="moves">
-            <button id="psierre">Pierre</button>
-            <button>Feuille</button>
-            <button>Ciseaux</button>
+            <button id="pierre">Pierre</button>
+            <button id="feuille">Feuille</button>
+            <button id="ciseaux">Ciseaux</button>
         </div>
         <br>
+        <p></p>
         <button id="reset">Reset</button>
     </div>
   
